--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,20 @@ jobs:
         run: |
           pip install mkdocs mkdocs-material mkdocs-static-i18n mike
 
-      - name: Read version from .version
-        id: get_version
+      - name: Read version info from .version
+        id: version
         run: |
-          echo "VERSION=$(cat .version)" >> $GITHUB_OUTPUT
+          source .version
+          echo "VERSION=$version" >> $GITHUB_OUTPUT
+          echo "SET_DEFAULT=$set_default" >> $GITHUB_OUTPUT
 
       - name: Deploy with mike
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          mike deploy "${{ steps.get_version.outputs.VERSION }}" --push
+          mike deploy "${{ steps.version.outputs.VERSION }}" --push
+
+          if [ "${{ steps.version.outputs.SET_DEFAULT }}" = "true" ]; then
+            mike set-default "${{ steps.version.outputs.VERSION }}" --push
+          fi
