--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,35 @@ nav:
   - コントリビュート: contribute.md
   - モジュール:
     - convolution: modules/convolution.md
+    - dsu: modules/dsu.md
+    - fenwick: modules/fenwick.md
+    - io: modules/io.md
+    - lazysegtree: modules/lazysegtree.md
+    - math: modules/math.md
+    - maxflow: modules/maxflow.md
+    - method_traits: modules/method_traits.md
+    - mincostflow: modules/mincostflow.md
+    - modint: modules/modint.md
+    - scc: modules/scc.md
+    - segtree: modules/segtree.md
+    - string: modules/string.md
+    - ext:
+      - affine: modules/ext/affine.md
+      - avltree: modules/ext/avltree.md
+      - dualsegtree: modules/ext/dualsegtree.md
+      - interval_heap: modules/ext/interval_heap.md
+      - knapsack: modules/ext/knapsack.md
+      - longest_common_subsequence: modules/ext/longest_common_subsequence.md
+      - potentialized_unionfind: modules/ext/potentialized_unionfind.md
+      - priority_queue: modules/ext/priority_queue.md
+      - string: modules/ext/string.md
+    - py:
+      - bisect: modules/py/bisect.md
+      - heapq: modules/py/heapq.md
+      - itertools: modules/py/itertools.md
+      - math: modules/py/math.md
+      - operator: modules/py/operator.md
+      - string: modules/py/string.md
   - ライセンス: license.md
 plugins:
   - search:
